--- a/WATCH.CSS
+++ b/WATCH.CSS
@@ -2,15 +2,14 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 body{
-    background: linear-gradient(to right, rgb(255,0,128),hs1(,175,100%,50%));
+    background: linear-gradient(to right, rgb(51, 25, 38),hs1(,175,100%,50%));
     display: flex;
     justify-content:center;
     align-item: center;
     min: height:100vb;
     overflow:hidden;
-}
-clock{
     width: 300px;
     height: 300px;
     background-color: rgba(23,130,237,0,9,);
@@ -18,3 +17,81 @@ clock{
     border:2px solid black;
     position: relative;
 }
+
+clock,hand,hour{
+    width: 7px;
+    height: 35%;
+    background-color:rgb(rgb(139, 45, 45), green, rgb(52, 145, 49));
+    pointer-events:top;
+}
+
+,head{
+    font-family: 'Courier New', Courier, monospace;
+    text-transform: capitalize;
+    width: 100px;
+    background-color: aliceblue;
+    position: relative;
+
+}
+
+.clock,number1{--rotation:30deg}
+.CLOCK .NUMBER2{--rotation:60deg}
+.CLOCK .NUMBER3{--rotation:90deg}
+.clock.number4{--rotation:120deg}
+.clock.number5{--rotation:150deg}
+.clock.number6{--rotation:180deg}
+.clock.number7{--rotation:210deg}
+.clock.number8{--rotation:30deg}
+.clock.number10{--rotation:300deg}
+.clock.number11{--rotation:330deg}
+
+.CLOCK.hand{
+    --rotation:0:
+    poition:Absolute;
+    bottom: 5%;
+    left: 50%;
+    background-color: blue;
+    border: 1px solid rgb(136,99,224 blue);
+    border:top-left-radius;
+    border-top-right-radius: 10px;
+    transform-origin:bottion;
+    z-index: 10;
+    transition: translatex(-50%)rotate(calc(var(--rotation)*1deg));
+
+}
+
+
+.CLOCK::after{
+    content: "";
+    position: inherit;
+    background-attachment: fixed;
+    z-index: 11;
+    width: 15px;
+    height: 15pz;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border: radius 50%;
+
+}
+
+
+.CLOCK.hour.head{
+    width: 10px;
+    height: 35%;
+    background-color: rgb(166,209, 9.);
+    position: top;
+
+}
+
+
+
+.header{
+     font: family:"courier,new ,courier"monospace:
+     text-ailgn: center:
+     text-transform: capitalize:
+     width: 100px;
+     background-color: blueviolet:
+     position: top:
+}
+
